[gd_scene load_steps=5 format=3 uid="uid://cvaqt1x1atw1s"]

[ext_resource type="Script" path="res://src/UI/CharacterSheetSubpages/ProficienciesAndFeats/TakenFeatList.gd" id="1"]
[ext_resource type="Script" path="res://src/UI/CharacterSheetSubpages/ProficienciesAndFeats/FeatInfo.gd" id="2"]
[ext_resource type="Script" path="res://src/UI/CharacterSheetSubpages/ProficienciesAndFeats/AllFeats.gd" id="3"]
[ext_resource type="Theme" path="res://src/UI/Theme.tres" id="4"]

[node name="Feats" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0
theme = ExtResource("4")

[node name="Left" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Left"]
layout_mode = 2
text = "Taken Feats:"

[node name="TakenFeats" type="ScrollContainer" parent="Left"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="TakenFeatList" type="ItemList" parent="Left/TakenFeats" groups=["Persist"]]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="TakenFeatButtons" type="HBoxContainer" parent="Left"]
layout_mode = 2

[node name="RemoveFeat" type="Button" parent="Left/TakenFeatButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Feat"

[node name="ClearFeats" type="Button" parent="Left/TakenFeatButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear All Feats"

[node name="HSeparator" type="HSeparator" parent="Left"]
layout_mode = 2

[node name="Label3" type="Label" parent="Left"]
layout_mode = 2
text = "All Available Feats:"

[node name="AllFeats" type="ScrollContainer" parent="Left"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3")

[node name="ItemList" type="ItemList" parent="Left/AllFeats"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddToFeats" type="Button" parent="Left"]
layout_mode = 2
text = "Add to Feats"

[node name="FeatInfo" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2")

[node name="FeatName" type="HBoxContainer" parent="FeatInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="FeatInfo/FeatName"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Feat Name: "

[node name="LineEdit" type="LineEdit" parent="FeatInfo/FeatName"]
layout_mode = 2
size_flags_horizontal = 3
editable = false
selecting_enabled = false

[node name="Prerequisites" type="HBoxContainer" parent="FeatInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="FeatInfo/Prerequisites"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Prerequisites: "

[node name="LineEdit" type="LineEdit" parent="FeatInfo/Prerequisites"]
layout_mode = 2
size_flags_horizontal = 3
editable = false
selecting_enabled = false

[node name="Source" type="HBoxContainer" parent="FeatInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="FeatInfo/Source"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Source: "

[node name="LineEdit" type="LineEdit" parent="FeatInfo/Source"]
layout_mode = 2
size_flags_horizontal = 3
editable = false
selecting_enabled = false

[node name="Effect" type="HBoxContainer" parent="FeatInfo"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="FeatInfo/Effect"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Effect: "

[node name="TextEdit" type="TextEdit" parent="FeatInfo/Effect"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 3
selecting_enabled = false
wrap_mode = 1

[connection signal="item_activated" from="Left/TakenFeats/TakenFeatList" to="Left/TakenFeats/TakenFeatList" method="_on_TakenFeatList_item_activated"]
[connection signal="button_up" from="Left/TakenFeatButtons/RemoveFeat" to="Left/TakenFeats/TakenFeatList" method="_on_RemoveFeat_button_up"]
[connection signal="button_up" from="Left/TakenFeatButtons/ClearFeats" to="Left/TakenFeats/TakenFeatList" method="_on_ClearFeats_button_up"]
[connection signal="item_activated" from="Left/AllFeats/ItemList" to="Left/AllFeats" method="_on_ItemList_item_activated"]
[connection signal="button_up" from="Left/AddToFeats" to="Left/AllFeats" method="_on_AddToFeats_button_up"]
